--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">RxPMBase</string>
     <string name="refresh_no_gif">Refresh NO Gif</string>
     <string name="show_yes_gif">Show YES Gif</string>
+    <string name="refresh_yes_gif">Refresh yes gif</string>
+    <string name="show_no_gif">Show no gif</string>
 </resources>
